# ubuntu-l10n

./: .gitignore  CHANGELOG.md  README.md  desktop-merge.py  po4a.cfg  pyproject.toml  pyproject.toml.bak  se.danielnylander.ubuntu-l10n.desktop  se.danielnylander.ubuntu-l10n.desktop.in  ubuntu-l10n_0.2.1_all.deb
.github/workflows/: build-rpm.yml  release.yml  transifex-sync.yml
.tx/: config
build-new/ubuntu-l10n_0.2.1_all/DEBIAN/: control
build-new/ubuntu-l10n_0.2.1_all/usr/share/applications/: se.danielnylander.ubuntu-l10n.desktop
data/: se.danielnylander.ubuntu-l10n.desktop
data/man/: ubuntu-l10n.1
po/: README.md  sv.mo  sv.po  ubuntu-l10n.pot
po/man/: sv.po  ubuntu-l10n.1.pot
po/sv/LC_MESSAGES/: ubuntu-l10n.mo
rpm-build/ubuntu-l10n_0.2.1/usr/lib/python3/dist-packages/ubuntu_l10n/: app.py  scraper.py
rpm-build/ubuntu-l10n_0.2.1/usr/share/locale/sv/LC_MESSAGES/: ubuntu-l10n.mo
ubuntu_l10n/: __init__.py.bak  app.py
